--- a/style.css
+++ b/style.css
@@ -7,15 +7,19 @@
 html, body {
     width: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 header{
     width: 100%;
-    height: 80px;
+    height: 95px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding-top: 10px;
-
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #fff; */
 }
 .logo a{
     display: flex;
@@ -81,7 +85,7 @@ a{
     display: flex;
     align-items:center;
     justify-content: space-around;
-    margin-top: 4rem;
+    margin-top: 5rem;
 }
 .main1-left{
     width: 40%;
